devs/l502/l502api_compat.h


#define L502_ADC_RANGE_CNT            6
#define L502_DEVNAME_SIZE           32
#define L502_SERIAL_SIZE            32
#define L502_DAC_CH_CNT  2
typedef enum {
    L502_STREAM_ADC  = X502_STREAM_ADC, 
    L502_STREAM_DIN  = X502_STREAM_DIN, 
    L502_STREAM_DAC1 = X502_STREAM_DAC1, 
    L502_STREAM_DAC2 = X502_STREAM_DAC2, 
    L502_STREAM_DOUT = X502_STREAM_DOUT, 
    L502_STREAM_ALL_IN = X502_STREAM_ALL_IN,
    L502_STREAM_ALL_OUT = X502_STREAM_ALL_OUT
} t_l502_streams;
typedef enum {
    L502_STREAM_OUT_WORD_TYPE_DOUT   = X502_STREAM_OUT_WORD_TYPE_DOUT, 
    L502_STREAM_OUT_WORD_TYPE_DAC1   = X502_STREAM_OUT_WORD_TYPE_DAC1, 
    L502_STREAM_OUT_WORD_TYPE_DAC2   = X502_STREAM_OUT_WORD_TYPE_DAC2  
} t_l502_stream_out_wrd_type;
typedef enum {
    L502_MODE_FPGA  = X502_MODE_FPGA, 
    L502_MODE_DSP   = X502_MODE_DSP, 
    L502_MODE_DEBUG = X502_MODE_DEBUG  
} t_l502_mode;
typedef enum {
    L502_DAC_CH1 = X502_DAC_CH1, 
    L502_DAC_CH2 = X502_DAC_CH2  
} t_l502_dac_ch;
typedef enum {
    L502_DAC_FLAGS_VOLT   = X502_DAC_FLAGS_VOLT,
    L502_DAC_FLAGS_CALIBR  = X502_DAC_FLAGS_CALIBR
} t_l502_dacout_flags;
typedef enum {
    L502_DMA_CH_IN  = X502_STREAM_CH_IN, 
    L502_DMA_CH_OUT = X502_STREAM_CH_OUT  
} t_l502_dma_ch;
typedef enum {
    L502_PULLUPS_DI_H    = X502_PULLUPS_DI_H, 
    L502_PULLUPS_DI_L    = X502_PULLUPS_DI_L, 
    L502_PULLUPS_DI_SYN1 = X502_PULLUPS_DI_SYN1, 
    L502_PULLUPS_DI_SYN2 = X502_PULLUPS_DI_SYN2  
} t_l502_pullups;
typedef enum {
    L502_DEVFLAGS_DAC_PRESENT         = X502_DEVFLAGS_DAC_PRESENT,
    L502_DEVFLAGS_GAL_PRESENT         = X502_DEVFLAGS_GAL_PRESENT,
    L502_DEVFLAGS_BF_PRESENT          = X502_DEVFLAGS_BF_PRESENT,
    L502_DEVFLAGS_FLASH_DATA_VALID    = X502_DEVFLAGS_FLASH_DATA_VALID,
    L502_DEVFLAGS_FLASH_ADC_CALIBR_VALID = X502_DEVFLAGS_FLASH_ADC_CALIBR_VALID,
    L502_DEVFLAGS_FLASH_DAC_CALIBR_VALID = X502_DEVFLAGS_FLASH_DAC_CALIBR_VALID
} t_l502_dev_flags;
typedef enum {
    L502_OUT_CYCLE_FLAGS_FORCE = X502_OUT_CYCLE_FLAGS_FORCE
} t_l502_out_cycle_flags;
typedef t_x502_hnd t_l502_hnd;
typedef struct {
    double offs; 
    double k; 
} t_l502_cbr_coef;
typedef struct {
    t_l502_cbr_coef adc[L502_ADC_RANGE_CNT];
    uint32_t res1[64]; 
    t_l502_cbr_coef dac[L502_DAC_CH_CNT];
    uint32_t res2[20]; 
} t_l502_cbr;
typedef struct {
    char name[L502_DEVNAME_SIZE]; 
    char serial[L502_SERIAL_SIZE]; 
    uint32_t devflags; 
    uint16_t fpga_ver; 
    uint8_t  plda_ver; 
    uint8_t  board_rev; 
    uint8_t res[120]; 
    t_l502_cbr cbr; 
} t_l502_info;
LPCIE_EXPORT(t_l502_hnd) L502_Create(void);
LPCIE_EXPORT(int32_t) L502_Free(t_l502_hnd hnd);
LPCIE_EXPORT(int32_t) L502_Close(t_l502_hnd hnd);
LPCIE_EXPORT(int32_t) L502_GetDevInfo(t_l502_hnd hnd, t_l502_info* info);
LPCIE_EXPORT(int32_t) L502_Configure(t_l502_hnd hnd, uint32_t flags);
LPCIE_EXPORT(int32_t) L502_SetLChannel(t_l502_hnd hnd, uint32_t lch, uint32_t phy_ch,
                      uint32_t mode, uint32_t range, uint32_t avg);
LPCIE_EXPORT(int32_t) L502_SetLChannelCount(t_l502_hnd hnd, uint32_t lch_cnt);
LPCIE_EXPORT(int32_t) L502_GetLChannelCount(t_l502_hnd hnd, uint32_t* lch_cnt);
LPCIE_EXPORT(int32_t) L502_SetAdcFreqDivider(t_l502_hnd hnd, uint32_t adc_freq_div);
LPCIE_EXPORT(int32_t) L502_SetAdcInterframeDelay(t_l502_hnd hnd, uint32_t delay);
LPCIE_EXPORT(int32_t) L502_SetDinFreqDivider(t_l502_hnd hnd, uint32_t din_freq_div);
LPCIE_EXPORT(int32_t) L502_SetAdcFreq(t_l502_hnd hnd, double *f_acq, double *f_frame);
LPCIE_EXPORT(int32_t) L502_SetDinFreq(t_l502_hnd hnd, double *f_din);
LPCIE_EXPORT(int32_t) L502_GetAdcFreq(t_l502_hnd hnd, double *f_acq, double *f_frame);
LPCIE_EXPORT(int32_t) L502_SetRefFreq(t_l502_hnd hnd, uint32_t freq);
LPCIE_EXPORT(int32_t) L502_SetSyncMode(t_l502_hnd hnd, uint32_t sync_mode);
LPCIE_EXPORT(int32_t) L502_SetSyncStartMode(t_l502_hnd hnd, uint32_t sync_start_mode);
LPCIE_EXPORT(int32_t) L502_SetMode(t_l502_hnd hnd, uint32_t mode);
LPCIE_EXPORT(int32_t) L502_GetMode(t_l502_hnd hnd, uint32_t* mode);
LPCIE_EXPORT(int32_t) L502_SetAdcCoef(t_l502_hnd hnd, uint32_t range, double k, double offs);
LPCIE_EXPORT(int32_t) L502_GetAdcCoef(t_l502_hnd hnd, uint32_t range, double* k, double* offs);
LPCIE_EXPORT(int32_t) L502_AsyncOutDac(t_l502_hnd hnd, uint32_t ch, double data, uint32_t flags);
LPCIE_EXPORT(int32_t) L502_AsyncOutDig(t_l502_hnd hnd, uint32_t val, uint32_t msk);
LPCIE_EXPORT(int32_t) L502_AsyncInDig(t_l502_hnd hnd, uint32_t* din);
LPCIE_EXPORT(int32_t) L502_AsyncGetAdcFrame(t_l502_hnd hnd, uint32_t flags,
                                       uint32_t tout, double* data);
LPCIE_EXPORT(int32_t) L502_StreamsEnable(t_l502_hnd hnd, uint32_t streams);
LPCIE_EXPORT(int32_t) L502_StreamsDisable(t_l502_hnd hnd, uint32_t streams);
LPCIE_EXPORT(int32_t) L502_StreamsStart(t_l502_hnd hnd);
LPCIE_EXPORT(int32_t) L502_StreamsStop(t_l502_hnd hnd);
LPCIE_EXPORT(int32_t) L502_IsRunning(t_l502_hnd hnd);
LPCIE_EXPORT(int32_t) L502_Recv(t_l502_hnd hnd, uint32_t* buf, uint32_t size, uint32_t tout);
LPCIE_EXPORT(int32_t) L502_Send(t_l502_hnd hnd, const uint32_t* buf, uint32_t size, uint32_t tout);
LPCIE_EXPORT(int32_t) L502_ProcessAdcData(t_l502_hnd hnd, const uint32_t* src,  double *dest,
                            uint32_t *size, uint32_t flags);
LPCIE_EXPORT(int32_t) L502_ProcessData(t_l502_hnd hnd, const uint32_t* src, uint32_t size,
                     uint32_t flags, double *adc_data, uint32_t *adc_data_size,
                     uint32_t *din_data, uint32_t *din_data_size);
LPCIE_EXPORT(int32_t) L502_ProcessDataWithUserExt(t_l502_hnd hnd, const uint32_t* src, uint32_t size,
                                   uint32_t flags, double *adc_data,
                                   uint32_t *adc_data_size, uint32_t *din_data,
                                   uint32_t *din_data_size,
                                   uint32_t *usr_data, uint32_t *usr_data_size);
LPCIE_EXPORT(int32_t) L502_PrepareData(t_l502_hnd hnd, const double* dac1, const double* dac2,
                            const uint32_t* digout, uint32_t size, int32_t flags,
                            uint32_t* out_buf);
LPCIE_EXPORT(int32_t) L502_GetRecvReadyCount(t_l502_hnd hnd, uint32_t *rdy_cnt);
LPCIE_EXPORT(int32_t) L502_GetSendReadyCount(t_l502_hnd hnd, uint32_t *rdy_cnt);
LPCIE_EXPORT(int32_t) L502_GetNextExpectedLchNum(t_l502_hnd hnd, uint32_t *lch);
LPCIE_EXPORT(int32_t) L502_PreloadStart(t_l502_hnd hnd);
LPCIE_EXPORT(int32_t) L502_OutCycleLoadStart(t_l502_hnd hnd, uint32_t size);
LPCIE_EXPORT(int32_t) L502_OutCycleSetup(t_l502_hnd hnd, uint32_t flags);
LPCIE_EXPORT(int32_t) L502_OutCycleStop(t_l502_hnd hnd, uint32_t flags);