pas/l502api.pas


    {-------- Флаги для обозначения синхронных потоков данных -----------------}
    L502_STREAM_ADC  = $01; //Поток данных от АЦП
    L502_STREAM_DIN  = $02; // Поток данных с цифровых входов
    L502_STREAM_DAC1 = $10; // Поток данных первого канала ЦАП
    L502_STREAM_DAC2 = $20; // Поток данных второго канала ЦАП
    L502_STREAM_DOUT = $40; // Поток данных на цифровые выводы
    // объединение всех флагов, обозначающих потоки данных на ввод
    L502_STREAM_ALL_IN = L502_STREAM_ADC or L502_STREAM_DIN;
    // объединение всех флагов, обозначающих потоки данных на вывод
    L502_STREAM_ALL_OUT = L502_STREAM_DAC1 or L502_STREAM_DAC2 or L502_STREAM_DOUT;


    {--- Константы, определяющие тип передаваемого отсчета из ПК в модуль -----}
    L502_STREAM_OUT_WORD_TYPE_DOUT   = $0; // Цифровой вывод
    L502_STREAM_OUT_WORD_TYPE_DAC1   = $40000000; // Код для 1-го канала ЦАП
    L502_STREAM_OUT_WORD_TYPE_DAC2   = $80000000; // Код для 2-го канала ЦАП

    {------------------ Режим работы модуля L502 ------------------------------}
    L502_MODE_FPGA  = 0; // Все потоки данных передаются через ПЛИС минуя
                         //   сигнальный процессор BlackFin
    L502_MODE_DSP   = 1; // Все потоки данных передаются через сигнальный
                         //   процессор, который должен быть загружен
                         //   прошивкой для обработки этих потоков
    L502_MODE_DEBUG = 2; // Отладочный режим

    {------------------- Номера каналов ЦАП -----------------------------------}
    L502_DAC_CH1 = 0;  //Первый канал ЦАП
    L502_DAC_CH2 = 1;  //Второй канал ЦАП

    {----------- Флаги, используемые при выводе данных на ЦАП -----------------}
    // Указывает, что значение задано в Вольтах и при выводе его нужно
    // перевести в коды ЦАП. Если флаг не указан, то считается, что значение
    // изначально в кодах
    L502_DAC_FLAGS_VOLT    = $0001;
    // Указывает, что нужно применить калибровочные коэффициенты перед
    //    выводом значения на ЦАП.
    L502_DAC_FLAGS_CALIBR  = $0002;

    {------------------ Номера каналов DMA ------------------------------------}
    L502_DMA_CH_IN  = 0; // Общий канал DMA на ввод
    L502_DMA_CH_OUT = 1; // Общий канал DMA на вывод

    {--- Цифровые линии, на которых можно включить подтягивающие резисторы ----}
    L502_PULLUPS_DI_H    = $01; // Старшая половина цифровых входов
    L502_PULLUPS_DI_L    = $02; // Младшая половина цифровых входов
    L502_PULLUPS_DI_SYN1 = $04; // Линия SYN1
    L502_PULLUPS_DI_SYN2 = $08; // Линия SYN2



    {--------------- Флаги, определяющие наличие опций в модуле ---------------}
    // Признак наличия двухканального канального ЦАП
    L502_DEVFLAGS_DAC_PRESENT         = X502_DEVFLAGS_DAC_PRESENT;
    // Признак наличия сигнального процессора BlackFin
    L502_DEVFLAGS_BF_PRESENT          = X502_DEVFLAGS_BF_PRESENT;
    // Признак наличия гальваноразвязки
    L502_DEVFLAGS_GAL_PRESENT         = X502_DEVFLAGS_GAL_PRESENT;
    // Признак, что во Flash-памяти присутствует информация о модуле
    L502_DEVFLAGS_FLASH_DATA_VALID    = $00010000;
    // Признак, что во Flash-памяти присутствуют действительные калибровочные
    //   коэффициенты АЦП
    L502_DEVFLAGS_FLASH_ADC_CALIBR_VALID = $00020000;
    // Признак, что во Flash-памяти присутствуют действительные калибровочные
    //    коэффициенты ЦАП
    L502_DEVFLAGS_FLASH_DAC_CALIBR_VALID = $00040000;

    {----------------Флаги для режима циклического вывода----------------------}
    // Флаг указывает, что останов или смена сигнала могут произойти без ожидания
    //    конца цикла предыдущего сигнала.
    L502_OUT_CYCLE_FLAGS_FORCE = $01;


type
  // описатель модуля - указатель на непрозрачную структуру
  t_l502_hnd = t_x502_hnd;


  { калибровочные коэффициенты диапазона }
  t_l502_cbr_coef = record
    offs: Double;  // смещение нуля
    k : Double; // коэффициент шкалы
  end;


  { Калибровочные коэффициенты модуля. }
  t_l502_cbr = record
    //Калибровочные коэффициенты АЦП
    adc: array[0..L502_ADC_RANGE_CNT-1] of t_l502_cbr_coef;
    res1: array[0..63] of LongWord;
    // Калибровочные коэффициенты ЦАП
    dac: array[0..L502_DAC_CH_CNT-1] of t_l502_cbr_coef;
    res2: array[0..19] of LongWord;
  end;

  { Информация о модуле L502.}
  t_l502_info = record
    name: array[0..L502_DEVNAME_SIZE-1] of AnsiChar; // Название устройства ("L502")
    serial: array[0..L502_SERIAL_SIZE-1] of AnsiChar; // Серийный номер
    devflags: LongWord; // Флаги описывающие наличие в модуле определенных опций
    fpga_ver : Word; // Версия ПЛИС (старший байт - мажорная, младший - минорная)
    plda_ver : Byte;  // Версия ПЛИС, управляющего аналоговой частью
    res : array[0..120] of Byte; //резерв
    cbr : t_l502_cbr; // Заводские калибровочные коэффициенты (из Flash-памяти)
  end;

  function L502_Create(): t_l502_hnd; stdcall;
  function L502_Free(hnd: t_l502_hnd): LongInt; stdcall;

  //разорвать связь с модулем
  function L502_Close(hnd: t_l502_hnd): LongInt; stdcall;
  //получение информации о модуле
  function L502_GetDevInfo(hnd: t_l502_hnd; out info: t_l502_info) : LongInt; stdcall;

  // Передача установленных настроек в модуль
  function L502_Configure(hnd: t_l502_hnd; flags: LongWord): LongInt; stdcall;
  // Установка параметров логического канала
  function L502_SetLChannel(hnd: t_l502_hnd; lch, phy_ch, mode, range, avg: LongWord): LongInt; stdcall;
  // Установка количества логических каналов
  function L502_SetLChannelCount(hnd: t_l502_hnd; lch_cnt : LongWord): LongInt; stdcall;
  // Получение количества логических каналов
  function L502_GetLChannelCount(hnd: t_l502_hnd; out lch_cnt: LongWord): LongInt; stdcall;
  // Установка делителя частоты сбора для АЦП
  function L502_SetAdcFreqDivider(hnd: t_l502_hnd; adc_freq_div : LongWord): LongInt; stdcall;
  // Установка значения межкадровой задержки для АЦП
  function L502_SetAdcInterframeDelay(hnd: t_l502_hnd; delay : LongWord): LongInt; stdcall;
  // Установка делителя частоты синхронного ввода с цифровых линий
  function L502_SetDinFreqDivider(hnd: t_l502_hnd; din_freq_div: LongWord): LongInt; stdcall;
  // Установка частоты сбора АЦП
  function L502_SetAdcFreq(hnd: t_l502_hnd; var f_acq, f_frame: Double): LongInt; stdcall;
  // Установка частоты синхронного ввода с цифровых входов
  function L502_SetDinFreq(hnd: t_l502_hnd; var f_din: Double): LongInt; stdcall;
  // Получить текущие значения частот сбора АЦП
  function L502_GetAdcFreq(hnd: t_l502_hnd; out f_acq, f_frame: Double): LongInt; stdcall;
  // Установка значения опорной частоты синхронизации.
  function L502_SetRefFreq(hnd: t_l502_hnd; freq: LongWord): LongInt; stdcall;
  // Установка режима генерации частоты синхронизации.
  function L502_SetSyncMode(hnd: t_l502_hnd; sync_mode: LongWord): LongInt; stdcall;
  // Установка режима запуска частоты синхронизации.
  function L502_SetSyncStartMode(hnd: t_l502_hnd; sync_start_mode: LongWord): LongInt; stdcall;
  // Установить режим работы модуля
  function L502_SetMode(hnd: t_l502_hnd; mode: LongWord): LongInt; stdcall;
  // Получение текущего режима работы модуля.
  function L502_GetMode(hnd: t_l502_hnd; out mode: LongWord): LongInt; stdcall;
  // Установить коэффициенты для калибровки значений АЦП.
  function L502_SetAdcCoef(hnd: t_l502_hnd; range: LongWord; k, offs: Double): LongInt; stdcall;
  // Получение текущих калибровочных коэффициентов АЦП.
  function L502_GetAdcCoef(hnd: t_l502_hnd; range: LongWord; out k, offs: Double): LongInt; stdcall;


  {----------------------- Функции асинхронного ввода-вывода ------------------}
  // Асинхронный вывод данных на канал ЦАП.
  function L502_AsyncOutDac(hnd: t_l502_hnd; ch: LongWord; data: Double; flags: LongWord): LongInt; stdcall;
  // Асинхронный вывод данных на цифровые выходы.
  function L502_AsyncOutDig(hnd: t_l502_hnd; val, msk: LongWord): LongInt; stdcall;
  // Асинхронный ввод значений с цифровых входов.
  function L502_AsyncInDig(hnd: t_l502_hnd; out din: LongWord): LongInt; stdcall;
  // Асинхронный ввод одного кадра АЦП.
  function L502_AsyncGetAdcFrame(hnd: t_l502_hnd; flags: LongWord; tout: LongWord; out data: array of Double): LongInt; stdcall;


  {-------------- Функции для работы с синхронным потоковым вводом-выводом ----}
  // Разрешение синхронных потоков на ввод/вывод.
  function L502_StreamsEnable(hnd: t_l502_hnd; streams: LongWord): LongInt; stdcall;
  // Запрещение синхронных потоков на ввод/вывод.
  function L502_StreamsDisable(hnd: t_l502_hnd; streams: LongWord): LongInt; stdcall;
  // Запуск синхронных потоков ввода/вывода.
  function L502_StreamsStart(hnd: t_l502_hnd): LongInt; stdcall;
  // Останов синхронных потоков ввода/вывода.
  function L502_StreamsStop(hnd: t_l502_hnd): LongInt; stdcall;
  // Проверка, запущен ли поток данных
  function L502_IsRunning(hnd: t_l502_hnd): LongInt; stdcall;


  // Чтение данных АЦП и цивровых входов из модуля.
  function L502_Recv(hnd: t_l502_hnd; out buf : array of LongWord; size: LongWord; tout : LongWord): LongInt; stdcall;
  // Передача потоковых данных ЦАП и цифровых выходов в модуль.
  function L502_Send(hnd: t_l502_hnd; const buf : array of LongWord; size: LongWord; tout: LongWord): LongInt; stdcall;
  // Обработка принятых отсчетов АЦП от модуля.
  function L502_ProcessAdcData(hnd: t_l502_hnd; const src: array of LongWord;
                               out dest: array of Double; var size : LongWord;
                               flags : LongWord): LongInt; stdcall;
  // Обработка принятых от модуля данных.
 function L502_ProcessData(hnd: t_l502_hnd; const src: array of LongWord; size: LongWord;
                     flags : LongWord; out adc_data: array of Double; var adc_data_size : LongWord;
                     out din_data: array of LongWord; var din_data_size: LongWord):LongInt; stdcall;
  // Обработка принятых от модуля данных ьзовательскими данными.
  function L502_ProcessDataWithUserExt(hnd: t_l502_hnd; const src: array of LongWord; size: LongWord;
                     flags : LongWord; out adc_data: array of Double; var adc_data_size : LongWord;
                     out din_data: array of LongWord; var din_data_size: LongWord;
                     out usr_data: array of LongWord; var usr_data_size: LongWord):LongInt; stdcall;
  // Подготовка данных для вывода в модуль.
  function L502_PrepareData(hnd: t_l502_hnd; const dac1, dac2: array of Double;
                            const digout: array of LongWord; size, flags : LongWord;
                            out out_buf: array of LongWord):LongInt; stdcall;

  // Получить количество отсчетов в буфере потока на ввод.
  function L502_GetRecvReadyCount(hnd: t_l502_hnd; out rdy_cnt: LongWord):LongInt; stdcall;
  // Получить размер свободного места в буфере потока на вывод.
  function L502_GetSendReadyCount(hnd: t_l502_hnd; out rdy_cnt: LongWord):LongInt; stdcall;
  // Получить номер следующего ожидаемого логического канала АЦП для обработки.
  function L502_GetNextExpectedLchNum(hnd: t_l502_hnd; out lch: LongWord):LongInt; stdcall;
  // Начало подготовки вывода синхронных данных
  function L502_PreloadStart(hnd: t_l502_hnd): LongInt; stdcall;

  //Установка ранее загруженного циклического сигнала на вывод
  function L502_OutCycleLoadStart(hnd: t_l502_hnd; size: LongWord):LongInt; stdcall;
  //Установка ранее загруженного циклического сигнала на вывод
  function L502_OutCycleSetup(hnd: t_l502_hnd; flags: LongWord):LongInt; stdcall;
  // Останов вывода циклического сигнала
  function L502_OutCycleStop(hnd: t_l502_hnd; flags: LongWord):LongInt; stdcall;
